2019-03-10  Thomas Koenig  <tkoenig@gcc.gnu.org>
	Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/87734
	Backort from trunk
	* symbol.c (gfc_add_procedure): Only throw an error if the
	procedure has not been declared either PUBLIC or PRIVATE.
	* resolve.c (is_illegal_recursion): Remove an assert().

2019-03-06  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/72714
	Backport from trunk
	* resolve.c (resolve_allocate_expr): Add some tests for coarrays.

2019-03-03  Harald Anlauf  <anlauf@gmx.de>
	    Steven G. Kargl  <kargl@gcc.gnu.org>

	Backport from trunk
	PR fortran/77583
	* symbol.c (check_conflict): Check for valid procedure name
	passed to error reporting routine.

2019-03-03  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/87689
	Backport from trunk
	* trans-decl.c (gfc_get_extern_function_decl): Add argument
	actual_args and pass it through to gfc_get_function_type.
	* trans-expr.c (conv_function_val): Add argument actual_args
	and pass it on to gfc_get_extern_function_decl.
	(conv_procedure_call): Pass actual arguments to conv_function_val.
	* trans-types.c (get_formal_from_actual_arglist): New function.
	(gfc_get_function_type): Add argument actual_args.  Generate
	formal args from actual args if necessary.
	* trans-types.h (gfc_get_function_type): Add optional argument.
	* trans.h (gfc_get_extern_function_decl): Add optional argument.

2019-02-23  Paul Thomas  <pault@gcc.gnu.org>

	Backport from trunk
	PR fortran/88117
	* resolve.c (deferred_op_assign): Return if the lhs expression
	has the pointer attribute.

2019-02-23  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/71066
	Backport from trunk
	* trans-decl.c (generate_coarray_sym_init):  For an array
	constructor in a DATA statement of a coarray variable, set the
	rank to 1 to avoid confusion later on.  If the constructor
	contains only one value, use that for initiailizig.

2019-02-10  Harald Anlauf  <anlauf@gmx.de>

	Backport from trunk
	PR fortran/89077